Kubernetes.Examples/Deployment/Services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-gw-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Host $host;
    
spec:
  tls:
    - hosts: 
        - api.shopwinner.org # api domain that is poiting to API GW
        - customer.shopwinner.org # Identity Server domain
        - orders.shopwinner.org # WebMvc Server domain
        - shopwinner.org # Root domain
      secretName: shopwinner-api-cert
  rules:
  
  - host: "customer.shop.org"
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ordering-api-service
            port:
              number: 80

  - host: "orders.shop.org"
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: customer-api-service
              port:
                number: 80
